--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
     "compile:sass": "node-sass public/sass/main.scss public/css/style.css -w"
   },
   "dependencies": {
+    "@babel/core": "^7.7.5",
+    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/preset-env": "^7.7.6",
+    "@babel/preset-react": "^7.7.4",
+    "@babel/runtime": "^7.7.6",
+    "antd": "^3.26.2",
+    "axios": "^0.19.0",
     "babel-cli": "6.24.1",
-    "babel-core": "6.25.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
@@ -33,7 +40,7 @@
     "redux": "^4.0.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "validator": "^11.1.0",
+    "validator": "^12.1.0",
     "webpack": "^4.38.0",
     "webpack-dev-server": "^3.7.2"
   },
