--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boiler-plate",
+  "name": "caromoto",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Kamran Poladov",
@@ -37,6 +37,7 @@
     "react-modal": "^3.9.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-switch": "^5.0.1",
     "redux": "^4.0.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
