--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "i18next": "^19.0.1",
     "i18next-browser-languagedetector": "^4.0.1",
     "i18next-xhr-backend": "^3.2.2",
+    "js-cookie": "^2.2.1",
     "live-server": "^1.2.1",
     "node-sass": "^4.13.0",
     "normalize.css": "^8.0.1",
