--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/runtime": "^7.7.6",
     "antd": "^3.26.2",
     "axios": "^0.19.0",
+    "axios-middleware": "^0.3.1",
     "babel-cli": "6.24.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "7.1.1",
@@ -29,6 +30,7 @@
     "i18next-browser-languagedetector": "^4.0.1",
     "i18next-xhr-backend": "^3.2.2",
     "js-cookie": "^2.2.1",
+    "jwt-decode": "^2.2.0",
     "live-server": "^1.2.1",
     "node-sass": "^4.13.0",
     "normalize.css": "^8.0.1",
