--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.1.0",
-    "i18next": "^19.0.1",
+    "i18next": "^19.0.2",
     "i18next-browser-languagedetector": "^4.0.1",
     "i18next-xhr-backend": "^3.2.2",
     "js-cookie": "^2.2.1",
@@ -37,6 +37,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-i18next": "^11.2.5",
+    "react-intl": "^3.9.2",
     "react-modal": "^3.9.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
