--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
     "@babel/runtime": "^7.7.6",
-    "antd": "^3.26.2",
     "axios": "^0.19.0",
     "axios-middleware": "^0.3.1",
     "babel-cli": "6.24.1",
@@ -26,9 +25,6 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.1.0",
-    "i18next": "^19.0.2",
-    "i18next-browser-languagedetector": "^4.0.1",
-    "i18next-xhr-backend": "^3.2.2",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^2.2.0",
     "live-server": "^1.2.1",
@@ -36,8 +32,8 @@
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-i18next": "^11.2.5",
     "react-intl": "^3.9.2",
+    "react-loader": "^2.4.6",
     "react-modal": "^3.9.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
