--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "webpack-dev-server": "^3.7.2"
   },
   "devDependencies": {
+    "svg-inline-loader": "^0.8.0",
     "webpack-cli": "^3.3.6"
   }
 }
